--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@storybook/addon-links": "^6.1.14",
     "@storybook/node-logger": "^6.1.14",
     "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.14"
+    "@storybook/react": "^6.1.14",
+    "clsx": "^1.1.1",
+    "react-svg": "^11.2.2"
   }
 }
