--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
+    "storybook": "start-storybook -p 6006 -s src/assets",
     "build-storybook": "build-storybook -s public"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   },
   "eslintConfig": {
     "extends": [
@@ -43,8 +46,13 @@
     "@storybook/addon-links": "^6.1.14",
     "@storybook/node-logger": "^6.1.14",
     "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.14",
     "clsx": "^1.1.1",
-    "react-svg": "^11.2.2"
+    "css-loader": "^5.0.1",
+    "node-sass": "4.14.1",
+    "react-svg": "^11.2.2",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0"
   }
 }
