--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "scaffold": "plop",
     "plop": "plop",
     "storybook": "start-storybook -p 6006 -s src/assets",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s src/assets"
   },
   "engines": {
     "node": ">=12.0.0"
