--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "scripts": {
     "scaffold": "plop",
     "plop": "plop",
+    "test": "react-scripts test",
     "storybook": "start-storybook -p 6006 -s src/assets",
     "build-storybook": "build-storybook -s src/assets"
   },
   "engines": {
     "node": ">=12.0.0"
   },
+  "files": [
+    "dist"
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -36,9 +40,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.1.10",
+    "@babel/plugin-transform-react-jsx": "^7.12.12",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-essentials": "^6.1.14",
     "@storybook/addon-links": "^6.1.14",
@@ -46,12 +50,17 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.14",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.1.10",
+    "chromatic": "^5.6.0",
     "clsx": "^1.1.1",
     "css-loader": "^5.0.1",
     "node-sass": "4.14.1",
     "plop": "^2.7.4",
     "react-svg": "^11.2.2",
     "sass-loader": "^10.1.1",
+    "storybook-contrast": "^0.11.4",
     "style-loader": "^2.0.0"
   }
 }
