--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
   "name": "mainsail-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "web-vitals": "^0.2.4"
+  },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BreezeChMS/mainsail-ui"
   },
   "scripts": {
     "scaffold": "plop",
     "plop": "plop",
     "test": "react-scripts test",
+    "build": "webpack --mode production",
+    "build:babel": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files src --ignore test.js,stories.js",
     "storybook": "start-storybook -p 6006 -s src/assets",
     "build-storybook": "build-storybook -s src/assets"
   },
   "engines": {
     "node": ">=12.0.0"
   },
-  "files": [
-    "dist"
-  ],
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,9 +49,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-transform-react-jsx": "^7.12.12",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-essentials": "^6.1.14",
     "@storybook/addon-links": "^6.1.14",
@@ -53,14 +65,19 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.1.10",
+    "babel-loader": "^8.2.2",
     "chromatic": "^5.6.0",
+    "clean-webpack-plugin": "^3.0.0",
     "clsx": "^1.1.1",
     "css-loader": "^5.0.1",
     "node-sass": "4.14.1",
+    "path": "^0.12.7",
     "plop": "^2.7.4",
     "react-svg": "^11.2.2",
     "sass-loader": "^10.1.1",
-    "storybook-contrast": "^0.11.4",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "webpack": "^5.16.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
