--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "chromatic": "^5.6.0",
     "clean-webpack-plugin": "^3.0.0",
     "clsx": "^1.1.1",
+    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "node-sass": "4.14.1",
     "path": "^0.12.7",
     "plop": "^2.7.4",
