--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "node-sass": "4.14.1",
     "path": "^0.12.7",
     "plop": "^2.7.4",
+    "react-scripts": "^4.0.1",
     "sass-loader": "^10.1.1",
     "semantic-release": "^17.3.4",
     "style-loader": "^2.0.0",
