--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@breezechms/mainsail-ui",
-  "version": "0.1.0",
+  "version": "0.1.11",
   "private": false,
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "main": "dist/index.js",
-  "module": "dist/index.js",
+  "module": "dist/index.module.js",
   "files": [
-    "index.js",
-    "README.md"
+    "dist/index.js",
+    "README.md",
+    "LICENSE"
   ],
   "repository": {
     "type": "git",
@@ -20,8 +21,7 @@
     "scaffold": "plop",
     "plop": "plop",
     "test": "react-scripts test",
-    "build": "webpack --mode production",
-    "build:babel": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files src --ignore test.js,stories.js",
+    "build": "rollup -c",
     "storybook": "start-storybook -p 6006 -s src/assets",
     "build-storybook": "build-storybook -s src/assets"
   },
@@ -46,6 +46,10 @@
       "last 1 safari version"
     ]
   },
+  "peerDependencies": {
+    "clsx": "^1.1.1",
+    "lodash": "^4.17.20"
+  },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
@@ -53,6 +57,9 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-essentials": "^6.1.14",
     "@storybook/addon-links": "^6.1.14",
@@ -66,20 +73,19 @@
     "@testing-library/user-event": "^12.1.10",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.6.0",
-    "clean-webpack-plugin": "^3.0.0",
     "clsx": "^1.1.1",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
     "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "path": "^0.12.7",
     "plop": "^2.7.4",
+    "postcss": "^8.2.4",
     "react-scripts": "^4.0.1",
-    "sass-loader": "^10.1.1",
+    "rollup": "^2.37.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
     "semantic-release": "^17.3.4",
-    "style-loader": "^2.0.0",
     "webpack": "^5.16.0",
     "webpack-cli": "^4.4.0",
-    "webpack-node-externals": "^2.5.2"
+    "babel-plugin-add-module-exports": "^1.0.4"
   }
 }
