--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,6 @@
 {
     "plugins": [
-        "@babel/plugin-transform-react-jsx",
-        "babel-plugin-add-module-exports",
-        ["@babel/plugin-proposal-class-properties", { "loose": true }]
+        "@babel/plugin-transform-react-jsx"
     ],
     "presets": [
         "@babel/preset-env",
