--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@breezechms/mainsail-ui",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "private": false,
   "dependencies": {
     "react": "^17.0.1",
@@ -22,6 +22,7 @@
     "plop": "plop",
     "test": "react-scripts test",
     "build": "rollup -c",
+    "start": "start-storybook -p 6006 -s src/assets",
     "storybook": "start-storybook -p 6006 -s src/assets",
     "build-storybook": "build-storybook -s src/assets"
   },
