changed build script title
This will better reflect what it's doing for our badge

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Storybook Build & Deploy
 on: 
   push:
     paths: ["src/components/**", "src/styles/**"] # Trigger the action only when files change in the folders defined here
