--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Storybook Build & Deploy
-on: 
-  push:
-    paths: ["src/components/**", "src/styles/**"] # Trigger the action only when files change in the folders defined here
+on: [push] 
+#  push:
+#    paths: ["src/components/**", "src/styles/**"] # Trigger the action only when files change in the folders defined here
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
