--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mainsail-ui",
-  "version": "0.1.21",
+  "version": "0.2.0",
   "private": false,
   "dependencies": {
     "react": "^17.0.1",
@@ -26,7 +26,8 @@
     "start": "start-storybook -p 6006 -s src/assets",
     "storybook": "start-storybook -p 6006 -s src/assets",
     "build-storybook": "build-storybook -o docs-build -s src/assets",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy-storybook": "storybook-to-ghpages",
+    "release": "auto shipit"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -75,6 +76,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.1.10",
+    "auto": "^10.15.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-add-module-exports": "^1.0.4",
     "chromatic": "^5.6.0",
@@ -87,7 +89,12 @@
     "react-scripts": "^4.0.1",
     "rollup": "^2.37.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0",
-    "semantic-release": "^17.3.4"
+    "rollup-plugin-postcss": "^4.0.0"
+  },
+  "auto": {
+    "plugins": [
+      "npm"
+    ],
+    "onlyPublishWithReleaseLabel": true
   }
 }
