adds to package scripts

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "storybook": "start-storybook -p 6006 -s src/assets",
     "build-storybook": "build-storybook -o docs-build -s src/assets",
     "deploy-storybook": "storybook-to-ghpages",
-    "release": "auto shipit"
+    "version": "npm version `auto version` -m 'Bump version to: %s [skip ci]'",
+    "publish": "npm publish && git push --follow-tags --set-upstream origin $branch",
+    "release": "auto changelog && npm run version && npm run publish && auto release"
   },
   "engines": {
     "node": ">=12.0.0"
