--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -35,4 +35,4 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           yarn build
-          npx auto shipit
+          npx auto shipit -vv
