tweaks package settings

--- a/package.json
+++ b/package.json
@@ -93,5 +93,12 @@
     "rollup": "^2.37.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0"
+  },
+  "author": "Josh Weaver <joshweaver@breezechms.com>",
+  "auto": {
+    "plugins": [
+      "npm"
+    ],
+    "onlyPublishWithReleaseLabel": true
   }
 }
