--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   tests:
-      name: Components
+      name: Component Tests
       runs-on: ubuntu-latest
       timeout-minutes: 5
       steps:
@@ -32,6 +32,7 @@ jobs:
 #             token: ${{ secrets.BREEZECI_TOKEN }}
 #             remove_label: pending,needs QA,needs review,ready to merge
 #             add_label: needs work
+
   release:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
