--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.1.10",
     "auto": "^10.15.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "8.1.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "chromatic": "^5.6.0",
     "clsx": "^1.1.1",
