--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -1,37 +1,11 @@
 name: Release
 
-on: [push]
+on:
+  push:
+    branches:
+      - "master"
 
 jobs:
-  tests:
-      name: Component Unit Tests
-      runs-on: ubuntu-latest
-      timeout-minutes: 5
-      steps:
-        - name: Checkout Pull Request Branch
-          uses: actions/checkout@v2
-
-        - name: Cache Node Modules
-          id: node-modules
-          uses: actions/cache@v1
-          with:
-            path: ui/node_modules/
-            key: ${{ runner.os }}-npm_directory-${{ github.head_ref }}-${{ hashFiles('**/yarn.lock') }}
-
-        - name: Install Dependencies
-          if: steps.node-modules.outputs.cache-hit != 'true'
-          run: yarn install --frozen-lockfile
-
-        - name: Run Jest Tests
-          run: yarn test --silent --colors || { echo "Component Tests Failed! (╯°□°）╯︵ ┻━┻"; exit 1; }
-
-#         - name: Set Back to Needs Work
-#           if: ${{ failure() }}
-#           uses: ./.github/workflows/actions/labeler
-#           with:
-#             token: ${{ secrets.BREEZECI_TOKEN }}
-#             remove_label: pending,needs QA,needs review,ready to merge
-#             add_label: needs work
   release:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
