--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,32 @@
 {
     "parserOptions": {
-        "ecmaVersion": 6,
+        "ecmaVersion": 2018,
         "sourceType": "module",
         "ecmaFeatures": {
             "jsx": true
         }
     },
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+      ],
     "rules": {
-        "semi": "error",
-        "import/no-anonymous-default-export": 0
-    }
+        "import/no-anonymous-default-export": 0,
+        "react/prop-types": [2, { "ignore": ["children"] }],
+        "react/boolean-prop-naming": ["error", { "propTypeNames": ["bool", "mutuallyExclusiveTrueProps"] }]
+    },
+    "plugins": [
+        "react"
+      ],
+      "settings": {
+        "react": {
+          "pragma": "React",
+          "version": "detect"
+        },
+        "linkComponents": [
+          // Components used as alternatives to <a> for linking, eg. <Link to={ url } />
+          "Hyperlink",
+          {"name": "Link", "linkAttribute": "to"}
+        ]
+      }
 }
