--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "babel-plugin-add-module-exports": "^1.0.4",
     "chromatic": "^5.6.0",
     "clsx": "^1.1.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "path": "^0.12.7",
