Externalize css build for css-only availability (#24)
* adds initial css build process

* fixes append location for plop

* improvements to sass for css only usage

* adds css script to build script

* adds css-only docs! 🎉

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "scaffold": "plop",
     "plop": "plop",
     "test": "react-scripts test",
-    "build": "rollup -c",
+    "build": "rollup -c && npm run build-sass-external",
+    "build-sass-external": "rimraf css && node-sass --output-style expanded src/components/core/index.scss ./dist/css/mainsail.css && postcss --use autoprefixer --map --output ./dist/css/mainsail.css ./dist/css/mainsail.css && cleancss -o ./dist/css/mainsail.min.css ./dist/css/mainsail.css",
     "build-icons": "npx @svgr/cli --icon --out-dir src/components/Icons src/assets/icons --replace-attr-values '#003462=currentColor'",
     "start": "start-storybook -p 6006 -s src/assets",
     "storybook": "start-storybook -p 6006 -s src/assets",
@@ -79,9 +80,11 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.1.10",
     "auto": "^10.15.0",
+    "autoprefixer": "^10.2.4",
     "babel-loader": "8.1.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "chromatic": "^5.6.0",
+    "clean-css-cli": "^5.2.0",
     "clsx": "^1.1.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
@@ -90,6 +93,7 @@
     "path": "^0.12.7",
     "plop": "^2.7.4",
     "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
     "react-scripts": "^4.0.1",
     "rollup": "^2.37.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
