--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "clsx": "^1.1.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "path": "^0.12.7",
