--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "mainsail-ui",
   "version": "0.6.0",
   "private": false,
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
   "main": "dist/index.js",
   "module": "dist/index.module.js",
   "files": [
@@ -52,9 +48,13 @@
     ]
   },
   "peerDependencies": {
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "@auto-it/npm": "^10.15.0",
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
@@ -88,6 +88,7 @@
     "clsx": "^1.1.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "path": "^0.12.7",
