Need checkout action

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "build-storybook": "build-storybook -o docs-build -s src/assets",
     "deploy-storybook": "storybook-to-ghpages",
     "lint": "eslint \"src/**/*.js\" -c .eslintrc.json",
-    "release": "auto shipit"
-  },
+    "release": "auto shipit",
+    "chromatic": "chromatic --project-token CHROMATIC_PROJECT_TOKEN --exit-zero-on-changes"
+},
   "engines": {
     "node": ">=12.0.0"
   },
