--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
+      - name: Checkout Pull Request Branch
+        uses: actions/checkout@v2
+
       - name: Cache Node Modules
         id: node-modules
         uses: actions/cache@v1
