--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -10,7 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
     steps:
+
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.BREEZECI_TOKEN }}
 
       - name: Prepare repository
         run: git fetch --unshallow --tags
@@ -29,8 +32,9 @@ jobs:
             yarn-deps-${{ hashFiles('yarn.lock') }}
 
       - name: Create Release 🚀
+        with:
+          token: ${{ secrets.BREEZECI_TOKEN }}
         env:
-          GITHUB_TOKEN: ${{ secrets.BREEZECI_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           yarn install --frozen-lockfile
