--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   chromatic:
-    name: Chromatic Visual Tests 🌈
+    name: Chromatic Visual Tests
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
