--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,10 +1,10 @@
-name: Chromatic 🌈
+name: Chromatic
 
 on: push
 
 jobs:
   chromatic:
-    name: Chromatic Visual Tests
+    name: Chromatic Visual Tests 🌈
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -24,7 +24,7 @@ jobs:
         if: steps.node-modules.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
 
-      - name: Publish to Chromatic
+      - name: Publish to Chromatic 🚀
         uses: chromaui/action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
