makes storybook only deploy on master

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 name: Storybook Build & Deploy
 on:
   push:
-    paths: ["src/**"] # Trigger the action only when files change in the folders defined here
+    branches:
+      - "master"
 jobs:
   build-and-deploy:
+    name: Publish Master Storybook 📕
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
