moves prop on button (#43)
* moves prop on button

* updates ci

* adds a visual difference for testing chromatic

* makes storybook only deploy on master

* fixes button padding

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: NPM Release
 
 on:
   push:
@@ -7,14 +7,16 @@ on:
 
 jobs:
   release:
+    name: Auto Release 📦
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
     steps:
-      - name: Prepare repository
       - uses: actions/checkout@v2
-        run: git fetch --unshallow --tags
         with:
           token: ${{ secrets.BREEZECI_TOKEN }}
+
+      - name: Prepare repository
+        run: git fetch --unshallow --tags
 
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
@@ -30,8 +32,6 @@ jobs:
             yarn-deps-${{ hashFiles('yarn.lock') }}
 
       - name: Create Release 🚀
-        with:
-          token: ${{ secrets.BREEZECI_TOKEN }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
