--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -32,6 +32,8 @@ jobs:
             yarn-deps-${{ hashFiles('yarn.lock') }}
 
       - name: Create Release 🚀
+        with:
+          token: ${{ secrets.BREEZECI_TOKEN }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
