sets up module absolute path resolvers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
     "prettier.configPath": ".prettierrc",
     "prettier.ignorePath": ".prettierignore",
     "prettier.enable": true,
-    "prettier.disableLanguages": ["json", "markdown", "yaml", "handlebars"],
     "editor.formatOnSave": true,
     "editor.defaultFormatter": null,
     "files.trimTrailingWhitespace": true,
@@ -10,4 +9,7 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[handlebars]": { "editor.formatOnSave": false },
+    "jest.disabledWorkspaceFolders": [
+        "node_modules"
+    ]
 }
