--- a/package.json
+++ b/package.json
@@ -109,5 +109,12 @@
     ],
     "baseBranch": "master",
     "onlyPublishWithReleaseLabel": true
+  },
+  "jest": {
+    "moduleNameMapper": {
+        "^components(.*)$": "<rootDir>/src/components$1",
+        "^styles(.*)$": "<rootDir>/src/styles$1",
+        "^utility(.*)$": "<rootDir>/src/utility$1"
+    }
   }
 }
