--- a/package.json
+++ b/package.json
@@ -55,8 +55,6 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "@auto-it/npm": "^10.15.0",
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
@@ -97,6 +95,8 @@
     "plop": "^2.7.4",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-scripts": "^4.0.1",
     "rollup": "^2.37.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -116,5 +116,9 @@
       "^styles(.*)$": "<rootDir>/src/styles$1",
       "^utility(.*)$": "<rootDir>/src/utility$1"
     }
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "react-popper": "^2.2.5"
   }
 }
