--- a/package.json
+++ b/package.json
@@ -55,8 +55,6 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "@auto-it/npm": "^10.15.0",
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
@@ -66,6 +64,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
@@ -97,6 +96,8 @@
     "plop": "^2.7.4",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-scripts": "^4.0.1",
     "rollup": "^2.37.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
