adds initial transition component support

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     "rules": {
         "import/no-anonymous-default-export": 0,
         "react/prop-types": [2, { "ignore": ["children"] }],
-        "react/boolean-prop-naming": ["error", { "propTypeNames": ["bool", "mutuallyExclusiveTrueProps"] }]
+        "react/boolean-prop-naming": ["error", { "propTypeNames": ["bool", "mutuallyExclusiveTrueProps"], "rule": "^(is|has|should)[A-Z]([A-Za-z0-9]?)+" }]
     },
     "plugins": [
         "react"
