--- a/package.json
+++ b/package.json
@@ -97,8 +97,8 @@
     "plop": "^2.7.4",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
     "react-scripts": "^4.0.1",
     "rollup": "^2.37.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
