--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -16,12 +16,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Cache Node Modules
-      #   id: node-modules
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: ui/node_modules/
-      #     key: ${{ runner.os }}-npm_directory-${{ github.head_ref }}-${{ hashFiles('**/yarn.lock') }}
+      - name: Cache Node Modules
+        id: node-modules
+        uses: actions/cache@v1
+        with:
+          path: ui/node_modules/
+          key: ${{ runner.os }}-npm_directory-${{ github.head_ref }}-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install Dependencies
         if: steps.node-modules.outputs.cache-hit != 'true'
