--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "deploy-storybook": "storybook-to-ghpages",
     "lint": "eslint \"src/**/*.js\" -c .eslintrc.json",
     "release": "auto shipit",
-    "chromatic": "chromatic --project-token CHROMATIC_PROJECT_TOKEN --exit-zero-on-changes"
+    "chromatic": "chromatic --project-token ar00duk4nfu --exit-zero-on-changes"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=12.0.0"
   },
   "eslintConfig": {
     "extends": [
