--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -20,8 +20,13 @@ jobs:
         id: node-modules
         uses: actions/cache@v1
         with:
+          path: ui/node_modules/
           key: ${{ runner.os }}-npm_directory-${{ github.head_ref }}-${{ hashFiles('**/yarn.lock') }}
 
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
       - name: Install Dependencies
         if: steps.node-modules.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
