--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "postcss": "^8.2.10",
     "postcss-cli": "^8.3.1",
     "react": "17.0.0",
+    "react-datepicker": "^3.8.0",
     "react-dom": "17.0.0",
     "react-scripts": "^4.0.1",
     "rollup": "^2.37.1",
