--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fuse.js": "^6.4.6",
     "lodash": "^4.17.21",
     "node-sass": "4.14.1",
     "path": "^0.12.7",
