--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
+
 # Next.js build output
 .next
 
@@ -120,6 +121,10 @@ dist
 # production
 /build
 /storybook-static
+/story-build
+/website
+
+# Docusaurus
 /docs-build
 
 # misc
