--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
+
 # Next.js build output
 .next
 
@@ -120,7 +121,13 @@ dist
 # production
 /build
 /storybook-static
+/story-build
+/website
+
+# Docusaurus
 /docs-build
+.docusaurus
+.cache-loader
 
 /docs/build
 /docs/.docusaurus
