Revert "edits docs gh action"
This reverts commit 021904dbf14dba6982bcf71e750da0646544e90f.

--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -1,11 +1,11 @@
-name: Docs Build & Deploy
+name: Storybook Build & Deploy
 on:
   push:
     branches:
       - "master"
 jobs:
   build-and-deploy:
-    name: Publish Docs 🦖
+    name: Publish Master Storybook 📕
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
@@ -14,8 +14,7 @@ jobs:
           persist-credentials: false
       - name: Install and Deploy 🚀
         run: | # Install npm packages and Deploy the Storybook files
-          git checkout gh-pages && git rebase master
-          cd ./docs
           yarn install
-          yarn build
-          git push origin gh-pages
+          yarn run deploy-storybook -- --ci --host-token-env-variable=GITHUB_TOKEN
+        env:
+          GITHUB_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
